# kinvest_trade

./: .env.example  .gitignore  PLAN.md  README.md  WORKLOG.md  main.py  pyproject.toml  run_telegram_test.py  run_watch.py
config/: fixed_config.json  settings.example.json
examples/: sample_snapshots.json
logs/api_calls/: 20260716_api_calls.csv
logs/events/: 20260709_events.csv  20260710_events.csv  20260713_events.csv  20260714_events.csv  20260715_events.csv  20260716_events.csv
logs/orders/: 20260714_orders.csv  20260715_orders.csv  20260716_orders.csv
logs/telegram/: 20260714_telegram.csv  20260715_telegram.csv  20260716_telegram.csv
logs/trades/: 20260703_150735_session.csv  20260703_193741_session.csv  20260706_172208_session.csv  20260707_000444_session.csv  20260707_015335_session.csv  20260707_214742_session.csv  20260708_session.csv  (+6 more)
scripts/: analyze_trades.py  install_telegram_control_service.sh
systemd/: kinvest-telegram-control.service
tests/: test_adaptive_params.py  test_analyze_trades.py  test_auto_trade_math.py  test_auto_trader.py  test_cli.py  test_client.py  test_config.py  test_domestic_scan.py  test_git_uploader.py  test_indicators.py  test_lab_notify.py  test_lab_risk.py  test_liquidity_lab.py  test_market_calendar.py  test_market_sessions.py  test_message_format.py  test_momentum_policy.py  test_notifier.py  test_overseas_scan.py  test_pool_rotation.py  test_repository.py  test_strategy_manager.py  test_telegram_control.py  test_time_utils.py  test_tv_scanner.py  test_unified_position_tracker.py  test_virtual_trades.py
(+41 files in other folders)
